--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -480,7 +480,14 @@
     }
   }
 }
-
+@keyframes fadeIn {
+  0% {opacity: 0}
+  100% {opacity: 1}
+}
+@-webkit-keyframes fadeIn {
+  0% {opacity: 0}
+  100% {opacity: 1}
+}
 .main_home{
   width: 100%;
   flex: 1;
@@ -501,6 +508,9 @@
       background-repeat: no-repeat;
       position: absolute;
       top: 6%;
+      animation: fadeIn 4s ease 0s 1 normal;
+      -webkit-animation: fadeIn 4s ease 0s 1 normal;
+      
       @media screen and (max-width : 560px){
         top: 1%;
       }
